[gd_scene load_steps=4 format=3 uid="uid://b1c3v7tn4f2wr"]

[ext_resource type="Texture2D" uid="uid://pj6do6ap73si" path="res://Art/Arrow Tower.png" id="1_1ovfp"]
[ext_resource type="Script" uid="uid://btlk7ge8wo106" path="res://arrow_tower.gd" id="1_7be5h"]
[ext_resource type="PackedScene" uid="uid://cscxiacunvih" path="res://arrow.tscn" id="2_l1ma4"]

[node name="ArrowTower" type="Button"]
custom_minimum_size = Vector2(100, 100)
offset_right = 8.0
offset_bottom = 8.0
toggle_mode = true
script = ExtResource("1_7be5h")
arrow_scene = ExtResource("2_l1ma4")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
texture = ExtResource("1_1ovfp")
expand_mode = 1

[node name="FiringTimer" type="Timer" parent="."]

[node name="TowerSelectPanel" type="Panel" parent="."]
offset_left = -256.0
offset_top = -216.0
offset_right = 360.0
offset_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="TowerSelectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="TowerSelectPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="ArrowTowerSelect" type="Button" parent="TowerSelectPanel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
toggle_mode = true
button_pressed = true

[node name="TextureRect" type="TextureRect" parent="TowerSelectPanel/MarginContainer/GridContainer/ArrowTowerSelect"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("1_1ovfp")
expand_mode = 1

[node name="RemoveProjectile" type="Button" parent="TowerSelectPanel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="toggled" from="." to="." method="_on_toggled"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_firing_timer_timeout"]
[connection signal="pressed" from="TowerSelectPanel/MarginContainer/GridContainer/RemoveProjectile" to="." method="_on_remove_projectile_pressed"]
